[gd_scene load_steps=3 format=3 uid="uid://cpqssbclasry1"]

[ext_resource type="Script" path="res://scripts/gameloop/final_puzzle.gd" id="1_aym1n"]
[ext_resource type="Theme" uid="uid://c6uahpeuppr8b" path="res://resources/theme/main_theme.tres" id="2_8eq22"]

[node name="FinalPuzzle" type="PanelContainer"]
offset_right = 491.0
offset_bottom = 264.0
script = ExtResource("1_aym1n")

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TerminalLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
text = " wmh.com starting...
 initializing dimensional anchors...
 dimensional anchors online
 
preparing for wormhole activation
... juiahvskdjfbg ..  akjdhfg. . ...
.. errorokjsdlfg 

.. ERROR 32251: subspace resonator failure
external frequency guide required

.. please enter subspace frequency:
[ hint: red + green - blue ] "
max_lines_visible = 5

[node name="InputBox" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FreqInput" type="LineEdit" parent="VBoxContainer/InputBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "|> enter frequency here"

[node name="ConfirmBtn" type="Button" parent="VBoxContainer/InputBox"]
layout_mode = 2
theme = ExtResource("2_8eq22")
text = "CONFIRM
"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/InputBox/ConfirmBtn" to="." method="_on_confirm_pressed"]
